--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
   height: 400px;
   background-color: rgb(62, 250, 250);
   display: flex;
+  margin-left: auto;
 }
 
 nav {
@@ -45,7 +46,7 @@ nav {
 }
 
 .links {
-  gap: 40px;
+  gap: 46px;
   display: flex;
   font-size: 20px;
 }
@@ -64,7 +65,7 @@ h2 {
 }
 
 .three-people {
-  
+  display: flex;
 }
 
 .flex-column {
