--- a/religion.css
+++ b/religion.css
@@ -10,6 +10,7 @@
 body {
   height: 1080px;
   background-color: #5A21DF;
+  background-image: url('04.svg');
 }
 
 .light-blue-text {
@@ -38,4 +39,18 @@ nav {
 
 a {
   text-decoration: none;
+}
+
+a:hover {
+  color: #3EFAFA;
+  transition: 1s;
+}
+
+p {
+  font-size: 24px;
+}
+
+.text-box {
+  padding-top: 32px;
+  width: 900px;
 }
