--- a/religion.css
+++ b/religion.css
@@ -42,7 +42,6 @@ a {
 }
 
 a:hover {
-  color: #3EFAFA;
   transition: 1s;
 }
 
@@ -53,4 +52,50 @@ p {
 .text-box {
   padding-top: 32px;
   width: 900px;
+}
+
+.dropbtn {
+  cursor: pointer;
+  background-color: #5A21DF;
+  color: white;
+  padding: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #5A21DF;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropbtn:hover {
+  background-color: #fff;
+  color:#5A21DF;
+  transition: 1s;
+  border-radius: 1rem;
+}
+
+.dropdown-content a:hover {
+  background-color: #fff;
+  color:#5A21DF;
+  border-radius: 1rem;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
