--- a/social.css
+++ b/social.css
@@ -10,6 +10,7 @@
 body {
   height: 1080px;
   background-color: #5A21DF;
+  background-image: url('05.svg');
 }
 
 .light-blue-text {
@@ -41,6 +42,60 @@ a {
 }
 
 a:hover {
-  color: #3EFAFA;
   transition: 1s;
+}
+
+p {
+  font-size: 24px;
+}
+
+.text-box {
+  padding-top: 32px;
+  width: 880px;
+}
+
+.dropbtn {
+  cursor: pointer;
+  background-color: #5A21DF;
+  color: white;
+  padding: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #5A21DF;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropbtn:hover {
+  background-color: #fff;
+  color:#5A21DF;
+  transition: 1s;
+  border-radius: 1rem;
+}
+
+.dropdown-content a:hover {
+  background-color: #fff;
+  color:#5A21DF;
+  border-radius: 1rem;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
