--- a/interview.css
+++ b/interview.css
@@ -65,6 +65,7 @@ a:hover {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border-radius: 1rem;
 }
 
 .dropdown-content a {
@@ -89,4 +90,50 @@ a:hover {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+}
+
+h2 {
+  color:#5A21DF;
+  text-align: center;
+}
+
+p {
+  color:#5A21DF;
+  font-size: 20px;
+  padding-top: 8px;
+}
+
+.box {
+  width: 900px;
+  height: 240px;
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 8px;
+  border-radius: 1rem;
+}
+
+.interview-box {
+  display: flex;
+  gap:20px;
+}
+
+.interview-image {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.transcript {
+  text-align: end;
+  padding-right: 36px;
+}
+
+audio {
+  width: 632px;
+  padding-top: 4px;
 }
