--- a/interview.css
+++ b/interview.css
@@ -95,7 +95,7 @@ a:hover {
 article {
   display: flex;
   flex-direction: column;
-  gap:20px;
+  gap: 20px;
 }
 
 h2 {
@@ -120,7 +120,7 @@ p {
 
 .interview-box {
   display: flex;
-  gap:20px;
+  gap: 20px;
 }
 
 .interview-image {
@@ -130,10 +130,22 @@ p {
 
 .transcript {
   text-align: end;
-  padding-right: 36px;
+}
+
+article a {
+  cursor: pointer;
+  color:#5A21DF;
+  font-size: 20px;
+  padding: 8px 12px;
+}
+
+article a:hover {
+  background-color: #5A21DF;
+  color:#fff;
+  border-radius: 1rem;
 }
 
 audio {
   width: 632px;
-  padding-top: 4px;
+  padding-top: 8px;
 }
