feat: add clean css code

--- a/interview.css
+++ b/interview.css
@@ -1,102 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-
-* {
-  font-family: 'Poppins', serif;
-  padding: 0;
-  margin: 0;
-  color: white;
-}
+@import url('style.css');
 
 body {
-  height: 1080px;
-  background-color: #5A21DF;
   background-image: url('interview.svg');
-}
-
-.light-blue-text {
-  color: #3EFAFA;
-}
-
-.container {
-  max-width: 1800px;
-  margin: 0 auto;
-}
-
-nav {
-  text-transform: uppercase;
-  height: 140px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 26px;
-}
-
-.links {
-  gap: 72px;
-  font-size: 20px;
-  display: flex;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  transition: 1s;
-}
-
-.dropbtn {
-  cursor: pointer;
-  background-color: #5A21DF;
-  color: white;
-  padding: 16px;
-  border: none;
-  display: block;
-}
-
-.dropbtn:hover {
-  background-color: #fff;
-  color:#5A21DF;
-  border-radius: 1rem;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #5A21DF;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border-radius: 1rem;
-}
-
-.dropdown-content a {
-  color: #fff;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropbtn:hover {
-  background-color: #fff;
-  color:#5A21DF;
-  transition: 1s;
-  border-radius: 1rem;
-}
-
-.dropdown-content a:hover {
-  background-color: #fff;
-  color:#5A21DF;
-  border-radius: 1rem;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 article {
